--- a/advertisement-management-system-rest/Jenkinsfile
+++ b/advertisement-management-system-rest/Jenkinsfile
@@ -1,27 +1,41 @@
 pipeline {
   agent any
-  stages {   
+  stages {  
     stage('Maven Compile'){
         steps{
             echo 'Project compile stage'
             bat label: 'Compilation running', script: '''mvn compile'''
                }
     }
-   
+  
     stage('Unit Test') {
        steps {
             echo 'Project Testing stage'
             bat label: 'Test running', script: '''mvn test'''
-          
+         
        }
        }
-   
+  
     stage('Maven Package'){
         steps{
             echo 'Project packaging stage'
             bat label: 'Project packaging', script: '''mvn package'''
         }
-    }        
+    }
    
-  }
+     stage('Jacoco Coverage Report') {
+            steps{
+                    jacoco()
+        }
+    }
+      
+    stage('SonarQube'){
+        steps{
+                bat label: '', script: '''mvn sonar:sonar \
+                -Dsonar.host.url=http://localhost:9000 \
+                -Dsonar.login=bfb9084db78c35bbb4c3622bb1420cbbeec82dd1'''
+            }
+           }     
+  
+   }
 }
